--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "link": "npm i -g",
     "start": "npm run build && npm run unlink && npm run link && clear",
     "clean": "rm -rf dist",
-    "build": "npm run clean && npm run dev && node scripts/copyTemplates.js"
+    "cleanWindows": "rmdir /s dist",
+    "build": "npm run dev && node scripts/copyTemplates.js"
   },
   "main": "dist/index.js",
   "bin": {
