--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "unlink": "npm uninstall -g ",
     "link": "npm i -g",
     "start": "npm run clean && npm run build && npm run unlink && npm run link && clear",
-    "startW": "npm run build && npm run unlink && npm run link && clear",
+    "startW": "npm run cleanWindows &&  run build && npm run unlink && npm run link",
     "clean": "rm -rf dist",
     "cleanWindows": "rmdir /s dist",
     "build": "npm run dev && node scripts/copyTemplates.js"
