--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node16",
     "declaration": true,
-    "declarationDir": "dist/types"
+    "declarationDir": "dist/types",
   },
   "include": [
     "src/**/*.ts"
