--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-bp-cli",
+  "name": "express-bp",
   "version": "1.0.0",
   "description": "Express CLI Tool for creating Boiler plate, automatic DB intializing and module creating",
   "type": "module",
