--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
   "engines": {
     "node": ">=14.18.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nevinedwin/express-cli-tool.git"
+  },
   "author": "Nevin Edwin",
   "license": "MIT",
   "devDependencies": {
