--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "express-bp",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Express CLI Tool for creating Boiler plate, automatic DB intializing and module creating",
   "type": "module",
   "files": [
     "bin",
     "dist",
-    "!**/.gitattributes"
+    "!.gitattributes"
   ],
   "preferGlobal": true,
   "scripts": {
