--- a/src/templates/express-template/package.json
+++ b/src/templates/express-template/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "express-bp-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +20,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.2",
     "helmet": "^7.0.0",
-    "hpp": "^0.2.3"
+    "hpp": "^0.2.3",
+    "mongoose": "^8.0.0"
   }
 }
