--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "express-bp",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Express CLI Tool for creating Boiler plate, automatic DB intializing and module creating",
   "type": "module",
   "files": [
     "bin",
-    "dist",
-    "!.gitattributes"
+    "dist"
   ],
   "preferGlobal": true,
   "scripts": {
