--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-bp",
-  "version": "1.3.0",
-  "description": "Express CLI Tool for creating Boiler plate, automatic DB intializing and module creating",
+  "name": "express-cli-tool",
+  "version": "1.0.0",
+  "description": "Express CLI Tool for creating express application, automatic DB intializing and module creating",
   "type": "module",
   "files": [
     "bin",
@@ -22,7 +22,7 @@
   },
   "main": "dist/index.js",
   "bin": {
-    "express-bp": "./bin/index.js"
+    "express": "./bin/index.js"
   },
   "keywords": [
     "express",
@@ -44,7 +44,8 @@
     "expressts",
     "modulegenerator",
     "simple-express",
-    "expresssimple"
+    "expresssimple",
+    "express-cli-tool"
   ],
   "engines": {
     "node": ">=16.16.0"
